--- a/05_tupa/demo-lazyload/index.html
+++ b/05_tupa/demo-lazyload/index.html
@@ -15,59 +15,59 @@
 	<script type="text/javascript" src="jquery.lazyload.min.js"></script>
 </head>
 <body>
-	<img src="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />
-	<img data-original="demo.gif" class="ten-lop-ban-tu-dat" />	
+	<img src="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />
+	<img data-original="demo.gif" class="test" />	
 	<script type="text/javascript">
 		$(function() {
-		    $("img.ten-lop-ban-tu-dat").lazyload({
+		    $("img.test").lazyload({
 		    	effect : "fadeIn",	//Hiệu ứng load hình ảnh
 		    	threshold: 100,		//Load trước số pixel chỉ định
 		    	event : "mouseover"	//Thực hiện load hình ảnh sự kiện
