--- a/05_tupa/demo-toiuu-js/index.html
+++ b/05_tupa/demo-toiuu-js/index.html
@@ -9,10 +9,11 @@
 <body>
 	<h3 id="demo"></h3>
 
-	<script src="script.js" async ></script>
-	<script src="script1.js" async></script>
-	<script src="script2.js" async ></script>
-	<script src="script3.js" async ></script>
+	<script src="script.js" defer ></script>
+	<script src="script1.js"
+	></script>
+	<script src="script2.js"></script>
+	<script src="script3.js"></script>
 
 	<p>HTML</p>
 </body>
